fix: cards are close to each other but row-gap remains the same

--- a/style/card.css
+++ b/style/card.css
@@ -2,9 +2,9 @@
 
 .card-container{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-wrap: wrap;
-    gap: 2em;
+    row-gap: 2em;
     padding: 3em 0;
 }
 
